--- a/LWC Components from Learnings/force-app/main/default/lwc/c2pModalComponent/c2pModalComponent.html
+++ b/LWC Components from Learnings/force-app/main/default/lwc/c2pModalComponent/c2pModalComponent.html
@@ -5,7 +5,7 @@
             <h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">Confirmation</h2>
         </header>
         <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-            <p>Successfully Created!!</p>
+            <p>Successfully Created!!!</p>
         </div>
         <footer class="slds-modal__footer">
             <button class="slds-button slds-button_brand" onclick={closeHandler}>Ok</button>
