--- a/LWC Components from Learnings/force-app/main/default/lwc/recordEditForm/recordEditForm.html
+++ b/LWC Components from Learnings/force-app/main/default/lwc/recordEditForm/recordEditForm.html
@@ -2,6 +2,7 @@
     <lightning-card title="lightning record edit form">
         <lightning-record-edit-form 
         object-api-name={objectName}
+        record-id="003RK00000mcMFBYA2"
         >
         <lightning-messages></lightning-messages>
     <lightning-input-field field-name={fields.accountField}></lightning-input-field>
